test: Implement page navigation tests on catalog endpoint